[gd_scene load_steps=12 format=3 uid="uid://m8eb30m2phbv"]

[ext_resource type="Script" uid="uid://cerxyojin83ah" path="res://scripts/main_scene/player.gd" id="1_dgqi6"]
[ext_resource type="PackedScene" uid="uid://dcd0l1ye5i2lk" path="res://scenes/missile1.tscn" id="2_smehm"]
[ext_resource type="PackedScene" uid="uid://ccgrm5ej6g17u" path="res://import/helicopter3.glb" id="3_ur7pv"]
[ext_resource type="LightmapGIData" uid="uid://kc1ejo1fk27f" path="res://resources/player.lmbake" id="3_y4r1p"]
[ext_resource type="Script" uid="uid://b23muv6jw0n6x" path="res://scripts/lightmap_gi.gd" id="4_y4r1p"]
[ext_resource type="Resource" uid="uid://dnag2y7ad5phm" path="res://resources/state_machines/smp_player_rotating.tres" id="5_ur7pv"]
[ext_resource type="Resource" uid="uid://bvap80v44apuu" path="res://resources/state_machines/smp_player_flying.tres" id="6_y4r1p"]
[ext_resource type="Script" uid="uid://cra0md6tqliiq" path="res://scripts/locker/l_s_state_machine_player.gd" id="9_3v2ag"]
[ext_resource type="PackedScene" uid="uid://lskm5tbedisk" path="res://scenes/lego_destroyer.tscn" id="9_ur7pv"]
[ext_resource type="PackedScene" uid="uid://eryu7cbmb1ip" path="res://import/helicopter3_destroyed.glb" id="10_y4r1p"]

[sub_resource type="BoxShape3D" id="BoxShape3D_kvmko"]
size = Vector3(3.48972, 1.04744, 3.45163)

[node name="player" type="CharacterBody3D" groups=["player"]]
collision_mask = 58
script = ExtResource("1_dgqi6")
lego_destroyer_np = NodePath("LegoDestroyer")
time_to_rotate = 0.2
speed = 15.0
rotation_duration = 0.5
shell1_scene = ExtResource("2_smehm")

[node name="LightmapGI" type="LightmapGI" parent="." groups=["lightmaps"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.455528, 0)
light_data = ExtResource("3_y4r1p")
script = ExtResource("4_y4r1p")

[node name="new_heli_colishape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.182022, 0.627111, -0.035965)
shape = SubResource("BoxShape3D_kvmko")

[node name="model_rotator" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.455528, 0)

[node name="helicopter3" parent="model_rotator" instance=ExtResource("3_ur7pv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.369704, 0)

[node name="MissileOrig" type="Marker3D" parent="model_rotator/helicopter3"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -1.84706, 0.510279, 0)

[node name="NewRotatingSMP" type="Node" parent="."]
script = ExtResource("9_3v2ag")
state_machine = ExtResource("5_ur7pv")

[node name="NewFlyingSMP" type="Node" parent="."]
script = ExtResource("9_3v2ag")
state_machine = ExtResource("6_y4r1p")

[node name="fire_rate_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="LegoDestroyer" parent="." instance=ExtResource("9_ur7pv")]
destroy_model = ExtResource("10_y4r1p")
initial_model_np = NodePath("../model_rotator/helicopter3")
explode_intensity = 8.0

[node name="CenterOfExplosion" parent="LegoDestroyer" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.345612, 0.69965, 0)

[connection signal="destroy" from="." to="." method="_on_destroy"]
[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="transited" from="NewRotatingSMP" to="." method="_on_rotating_smp_transited"]
[connection signal="transited" from="NewFlyingSMP" to="." method="_on_flying_smp_transited"]
[connection signal="timeout" from="fire_rate_timer" to="." method="_on_fire_rate_timer_timeout"]
[connection signal="destroy_end" from="LegoDestroyer" to="." method="_on_lego_destroyer_destroy_end"]

[editable path="model_rotator/helicopter3"]
[editable path="LegoDestroyer"]
